Fix size on mobile and new title for logosalad

--- a/src/components/sections/logoSalad/logoSalad.module.css
+++ b/src/components/sections/logoSalad/logoSalad.module.css
@@ -6,28 +6,34 @@
 
 .wrapper {
   composes: shared;
-  padding: 5rem 2rem;
+  padding: 5rem 0;
   background-color: var(--background-bg-light-primary);
+}
+
+.title {
+  padding-bottom: 2rem;
 }
 
 .logoWrapper {
   padding: 0;
   margin: 0;
   list-style: none;
-  max-width: var(--max-content-width-large);
-
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
   align-content: flex-start;
-  flex-wrap: wrap;
-  gap: 2.25rem 5.625rem;
+  max-width: var(--max-content-width-large);
 
   & > li {
     max-width: 15rem;
-    max-height: 4.5rem;
+    max-height: 5rem;
     overflow: hidden;
-    padding: 0.5rem;
     object-fit: contain;
+    display: inline-block;
+    margin-right: 3rem;
+  }
+
+  @media (max-width: 425px) {
+    text-wrap: balance;
+    & > li {
+      margin-right: 1rem;
+    }
   }
 }
